# kindle-display-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  KINDLE_SETUP.md  Makefile  README.md  docker-compose.yml  generate_image.py  pyproject.toml  requirements.txt  run_web.py  setup_calendar.py
.github/workflows/: ci.yml
app/: __init__.py  climate_data.py  config.py  main.py
app/cache/: __init__.py  sqlite.py
app/fetchers/: __init__.py  calendar.py  strava.py  weather.py
app/renderers/: __init__.py  calendar.py  strava.py  text.py  weather.py
app/web/: __init__.py  app.py  auth.py
app/web/routes/: __init__.py  calendar.py  dashboard.py  strava.py  weather.py
app/web/static/css/: custom.css  tufte.css
app/web/templates/: base.html  dashboard.html  login.html
app/web/templates/partials/: calendar.html  strava.html  weather.html
tests/: __init__.py  conftest.py  test_config.py  test_main.py  test_renderers.py  test_strava.py
